--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,6 +34,8 @@ target 'ourprophet3' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNPDF', :path => '../node_modules/react-native-view-pdf'
+
   target 'ourprophet3Tests' do
     inherit! :search_paths
     # Pods for testing
