--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,10 +2,12 @@
 
 buildscript {
     ext {
+        supportLibVersion = "28.0.3"
         buildToolsVersion = "28.0.3"
         minSdkVersion = 16
         compileSdkVersion = 28
         targetSdkVersion = 28
+        pdfViewer = "3.1.0-beta.1"
     }
     repositories {
         google()
